# ai-interence-server

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  COMPREHENSIVE_TEST_SUITE_PLAN.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEVELOPMENT_ROADMAP.md  Dockerfile  Dockerfile.cloud  Dockerfile.gpu  Dockerfile.railway  Dockerfile.simple  PRODUCTION_READINESS.md  QDRANT_RUST_INTEGRATION_SUMMARY.md  QDRANT_SETUP_GUIDE.md  README.md  SYSTEM_ARCHITECTURE_CHANGES.md  SYSTEM_FLOW_DIAGRAM.md  TESTING_GUIDE.md  VISUALIZATION_GUIDE.md  app.py  checklist_week2.md  cleanup_conversations.py  cleanup_conversations.sh  demo_config.json  demo_data.csv  demo_ml_guide.md  docker-compose.qdrant.yml  docker-compose.yml  example_new_model.rs  manual-test-commands.md  memory_test.py  nixpacks.toml  railway-deploy.md  railway.toml  render-deploy.md  render.yaml  requirements.txt  (+19 more)
config/: README.md
config/qdrant/: nginx.conf  production.yaml
data/qdrant/storage/: raft_state.json
examples/: day10_api_testing_guide.md  day10_document_processing.md  day10_file_testing_guide.md  day10_postman_testing_guide.md  day9_api_testing.md  generate_api_enhancement.md  test_day10.rs
frontend/: .env.production  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
k8s/: ai-inference-deployment.yaml
k8s/qdrant/: configmap.yaml  deployment.yaml  namespace.yaml  service.yaml  storage.yaml
src/: config.rs  error.rs  gpu_detection.rs  lib.rs  main.rs
src/api/: document_processing.rs  embedding.rs  enhanced_generate.rs  generate.rs  health.rs  index_management.rs  memory_monitor.rs  mod.rs  models.rs  search.rs  vectors.rs  vectors_enhanced.rs
src/batching/: mod.rs
src/errors/: app_error.rs
src/models/: atomic_swap.rs  circuit_breaker.rs  codellama.rs  common.rs  deepseek_coder.rs  failover_manager.rs  gemma.rs  gemma_poc.rs  llama.rs  llama2_7b_chat.rs  llama_generic.rs  mod.rs  phi3.rs  registry.rs  traits.rs  version_manager.rs
src/security/: auth.rs  middleware.rs  mod.rs  rate_limiter.rs
src/vector/: chunking_strategies.rs  document_ingestion.rs  embedding.rs  embedding_cache.rs  embedding_service.rs  fast_search.rs  incremental_updates.rs  index_monitor.rs  index_optimizer.rs  mod.rs  optimized_embedding_service.rs  qdrant_client.rs  qdrant_config.rs  qdrant_operations.rs  reindex_manager.rs  storage.rs  storage_factory.rs
test_documents/: company_policy.txt  cricket.txt
tests/: comprehensive_feature_tests.rs  integration_tests.rs  test_authentication_api_keys.rs  test_circuit_breaker_patterns.rs  test_day9_1_index_optimization.rs  test_day9_2_background_reindexing.rs  test_day9_3_index_monitoring.rs  test_day9_3_simple.rs  test_health_monitoring.rs
