[package]
name = "ai-interence-server"
version = "0.1.0"
edition = "2021"  # Change from 2024 to 2021 for better compatibility

[dependencies]
axum = "0.8.4"
tokio = { version = "1.0", features = ["full"] }
# Add accelerate feature for M1 optimization
candle-core = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-nn = { version = "0.9.1", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.1", features = ["metal", "accelerate"] }
tokenizers = "0.21.4"
# Remove unused dependencies that might slow compilation
# ort = "1.16.3"        # Remove if not using ONNX
# ndarray = "0.16"      # Remove if not needed
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0.99"
uuid = { version = "1.18.0", features = ["v4"] }
hf-hub = "0.4.3"
thiserror = "2.0.14"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5.2", features = ["util"] }
dotenv = "0.15"
# rayon = "1.10.0"      # Remove - can interfere with async tokio

# Add release optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Add dev optimizations for faster iteration
[profile.dev]
opt-level = 1
